2002-09-03  Juli Mallett  <jmallett@FreeBSD.org>

	* parser/Makefile.in: Use $(CC) instead of 'cc'.

2002-09-01  Rodrigo Moya <rodrigo@ximian.com>

	* gda/Application.cs: new class for libgda initialization and event
	loop management.

	* gda/Makefile.in: added new file as a dependency.
	
2002-09-01  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* glib/ListBase.cs: fixed compilation (the base class must be at least
	as accesible as the derived ones).

2002-08-31  Rodrigo Moya <rodrigo@ximian.com>

	* api/gda-api.xml: new file for the libgda API.

	* gda/*: added libgda bindings.

	* sources/README: updated requirements.

2002-08-31  Rachel Hestilow  <hestilow@ximian.com>

	Proper GList, GSList support. Read-only for now.

	* glue/list.c: Added.
	* glue/Makefile.am: Add list.c
	* glue/type.c: Add function gtksharp_is_object.
	
	* glib/ListBase.cs, List.cs: Added.
	* glib/SList.cs: Inherit from ListBase.
	* glib/Object.cs: Add static method "IsObject".

	* generator/Method.cs: Pass on element_type to constructor
	if specified.
	* generator/SymbolTable.cs: Move GList to manual types.
	
	* sample/GladeViewer.cs: Remove list hacks.
	
	* sources/Gnome.metadata: Specify element types for
	CanvasPathDef.Split and IconList.GetSelection. Rename
	CanvasPathDef *to methods to properly capitalized *To.
	* sources/Gtk.metadata: Hide Widget.ListAccelClosures until
	GClosure is handled properly.
	* sources/Pango.metadata: Added.

	* sample/test/TestToolbar.cs: Compile with recent delegate changes.
	
2002-08-31  Rachel Hestilow  <hestilow@ximian.com>

	* glib/Idle.cs: Added.
	* gtk/Application.cs: Add EventsPending, RunIteration.
	
	* sample/TreeViewDemo.cs: Add a status dialog while
	populating tree.
	
2002-08-31  Rachel Hestilow  <hestilow@ximian.com>

	* generator/Method.cs: Re-enable "if null then new" behavior
	for Opaques.
	
2002-08-29  Rachel Hestilow  <hestilow@ximian.com>

	* glib/DelegateWrapper.cs: Forgot to add this.
