@@ -1,3 +1,11 @@
+2002-09-04  Mike Kestner <mkestner@speakeasy.net>
+
+	* generator/ObjectGen.cs : generate dtors.
+	* glib/Object.cs : Implement IDisposable. Add a new DisposeNative
+	method. Implement default dtor.
+	* glue/object.c : new gtksharp_object_unref_if_floating method.
+	* gtk/Object.custom : override DisposeNative to check float bit.
+
 2002-09-03  Juli Mallett  <jmallett@FreeBSD.org>
 
 	* parser/Makefile.in: Use $(CC) instead of 'cc'.
